--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
 * {
-    margin:0;
+    margin: 0;
     padding: 0;
     border: none;
 }
@@ -9,12 +9,12 @@
 body {
     font-family: Lato, sans-serif;
     font-weight: 300;
-    color: #3a3a3a
+    color: #3a3a3a;
 }
 
 /* headings and logo */
 
-h1,h2 {
+h1, h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -23,7 +23,7 @@ h1,h2 {
 
 #logo {
     float: left;
-    font-size:280%;
+    font-size: 280%;
 }
 
 /* navigation links */
@@ -34,14 +34,13 @@ h1,h2 {
 }
 
 #menu, #logo {
-    line-height:75px;
+    line-height: 75px;
 }
 
-
 #menu li {
-    float:right;
+    float: right;
     list-style-type: none;
-    margin-right: 30px
+    margin-right: 30px;
 }
 
 #menu a {
@@ -55,7 +54,6 @@ h1,h2 {
 
 .active {
     border-bottom: 1px solid #3a3a3a
-
 }
 
 /* hero image */
@@ -64,15 +62,20 @@ h1,h2 {
     height: 600px;
     width: 100%;
     overflow: hidden;
+    position: relative;
+}
+
+#cover-text, #cover-text h2 {
+    color: #fff;
 }
 
 #hero-image {
     height: 600px;
     width: 100%;
     background: url('../images/hero-image.webp') no-repeat center center;
-    /* animates zoom effect on loading page*/
+    /* animates zoom effect on loading page */
     animation-name: hero-zoom;
-    animation-duration:5s;
+    animation-duration: 5s;
     animation-fill-mode: forwards;
 }
 
@@ -80,9 +83,29 @@ h1,h2 {
 
 @keyframes hero-zoom {
     from{
-        transform:scale(1)
+        transform: scale(1)
     }
     to{
         transform: scale(1.1);
     }
+}
+
+#cover-text {
+    font-size: 130%;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 300px;
+    height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241, 109, 107, .7);
+    
+    bottom: 30px;
+    right: 150px;
+
+    position: absolute;
 }
