--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,7 +245,7 @@ footer {
 
 /* Media quereies */
 
-/* For screens with screen width smaller than 1200px */
+/* For screens with width smaller than 1200px */
 
 @media screen and (max-width:1200px) {
     #club-ethos {
@@ -275,4 +275,18 @@ footer {
     hr {
         display:none;
     }
+}
+
+/* For screens with width smaller than 950px*/
+
+@media screen and (max-width:950px) {
+
+    #menu {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+    
 }
